# mvinverse-specualr-diffuse

./: .dockerignore  .dockerignore copy  .env  .gitignore  Dockerfile  Dockerfile_base  README.md  analyze_pi3x_to_mvinverse.py  code_by_myself.md  docker-compose.yaml  docker-entrypoint.sh  docker_training_textureverse_pi3x.ps1  framework_analysis.md  pyproject.toml  requirements.txt
mvinverse/models/: mvinverse.py
mvinverse/models/layers/: attention.py
tools/: generate_training_images.py  run_parallel_blender.ps1
training/: README.md  launch.py  loss.py  trainer.py
training/config/: default_dataset.yaml  example.yaml  textureverse_pi3x.yaml  textureverse_pi3x_docker.yaml  textureverse_pi3x_docker_1GPU.yaml  textureverse_pi3x_docker_local.yaml  textureverse_pi3x_docker_specular_glossiness.yaml
training/data/: base_dataset.py  composed_intrinsic_dataset.py  dataset_util.py  dynamic_dataloader.py
training/data/datasets/: hypersim.py  interiorverse.py  textureverse.py
training/train_utils/: freeze.py  general.py  logging.py  normalization.py
